--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
-  "name": "webpack_bundle",
+  "name": "goit-js-hw-10-food-service-3np",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --env.mode development",
-    "build": "webpack --env.mode production",
+    "start": "npm run dev",
+    "dev": "parcel src/index.html",
+    "build": "parcel build src/*.html --public-url /goit-js-hw-10-food-service-3/",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/paris-school/webpack_bundle.git"
+    "url": "git+https://https://github.com/Julia-if/goit-js-hw-10-food-service-3.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/paris-school/webpack_bundle/issues"
+    "url": "https://https://github.com/Julia-if/goit-js-hw-10-food-service-3/issues"
   },
-  "homepage": "https://github.com/paris-school/webpack_bundle#readme",
+  "homepage": "https://Julia-if.github.io/goit-js-hw-10-food-service-3",
   "devDependencies": {
     "@babel/core": "^7.12.8",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
@@ -44,6 +45,7 @@
   },
   "dependencies": {
     "gh-pages": "^3.1.0",
+    "parcel-plugin-nuke-dist": "^1.0.1",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
